public class AlunoPosGraduacao extends Usuario {

    public AlunoPosGraduacao(String codigo, String nome) {
        super(codigo, nome);
        //TODO Auto-generated constructor stub
    }

    @Override
    public void realizarEmprestimo(Livro livro) {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'realizarEmprestimo'");
    }
    
}
