public interface RegraEmprestimo {
    boolean podeEmprestar(Usuario usuario, Livro livro);
}
