package MATA62_TrabalhoFinal.br.ufba.src.app;
public class SaiComando implements Comando {

    @Override
    public boolean executar(Parametros parametros) {
        return false;
    }
}
