package br.ufba.src.app;

public class SistemaBiblioteca {
    
    public static void main(String[] args) {
        Console console = new Console();
        console.iniciar();
    }
}
