package br.ufba.src.app.command;
public interface Comando {
    public boolean executar(Parametros parametros);
}