package br.ufba.src.services;

public interface Observador {
    void notificar(Sujeito sujeito);
}
